# VastGPU-Funds-Tracker

./: .gitignore  CMakeLists.txt  README.md
src/: funds_calculator.cpp  funds_calculator.h  gpu_model.cpp  gpu_model.h  main.cpp
tests/: boundary.cpp  data_flow_tests.cpp  decision_table.cpp  flow_control_tests.cpp  test_funds_duration.cpp
